# DKMV

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  E2E_TEST_GUIDE.md  LICENSE  README.md  pyproject.toml  vision_paper.md
.agent/: analysis.json  assembly_done.txt  docs_manifest.json  docs_verification.json  features_stories_done.txt  features_stories_summary.json  phase_4_result.json  phases_done.txt  phases_summary.json  plan_report.json  pr_result.json  user_decisions.json
.agent/impl_docs/: README.md  features.md  phase1_adapter_foundation.md  phase4_polish_verification.md  progress.md
.github/workflows/: ci.yml
dkmv/: __main__.py  cli.py  config.py  init.py  project.py  registry.py
dkmv/adapters/: __init__.py  base.py  claude.py  codex.py
dkmv/builtins/dev/: 01-plan.yaml  02-implement.yaml  component.yaml  implement-phase.yaml
dkmv/builtins/docs/: 01-update-docs.yaml  02-verify.yaml  03-create-pr.yaml  component.yaml
dkmv/builtins/judge/: 01-verdict.yaml
dkmv/builtins/plan/: 01-analyze.yaml  02-features-stories.yaml  03-phases.yaml  04-assembly.yaml  05-evaluate-fix.yaml  component.yaml
dkmv/builtins/qa/: 01-evaluate.yaml  02-fix.yaml  03-re-evaluate.yaml  component.yaml
dkmv/builtins/ship/: 01-analyze.yaml  02-plan.yaml  03-implement.yaml  04-evaluate_fix.yaml  05-finalize.yaml  component.yaml
dkmv/components/: __init__.py  base.py
dkmv/components/dev/: __init__.py  component.py  models.py  prompt.md
dkmv/components/docs/: __init__.py  component.py  models.py  prompt.md
dkmv/components/judge/: __init__.py  component.py  models.py  prompt.md
dkmv/components/qa/: __init__.py  component.py  models.py  prompt.md
dkmv/core/: __init__.py  models.py  runner.py  sandbox.py  stream.py
dkmv/images/: Dockerfile
dkmv/runtime/: __init__.py  _artifacts.py  _capability.py  _facade.py  _handle.py  _introspection.py  _observer.py  _telemetry.py  _types.py
dkmv/tasks/: __init__.py  component.py  discovery.py  loader.py  manifest.py  models.py  pause.py  runner.py  system_context.py
dkmv/utils/: __init__.py  async_support.py  slug.py
docs/: AGENT_RULES.md  architecture_overview.md  issues.md
docs/adrs/: 0001-record-architecture-decisions.md  0002-claude-code-only-for-v1.md  0003-docker-base-image-node.md  0004-sandbox-layer-swerex.md  0005-package-manager-uv.md  0006-git-auth-github-token.md  0007-config-env-vars-only.md  0008-git-branches-inter-component-communication.md  0009-project-scoped-config.md  0010-container-side-agent-directory.md  0011-repo-argument-to-option.md  0012-yaml-manifest-component-system.md  0013-interactive-pause-mechanism.md  0014-judge-deletion-qa-evaluate-fix-loop.md  0015-git-commit-safety-strategy.md
docs/core/: PRD_TO_IMPLEMENTATION_GUIDE.md  claude_setup.md  main_idea.md
docs/core/dkmv_tasks/v1/: example_task.yaml
docs/decisions/: 0002-claude-code-only-for-v1.md
docs/implementation/: features.md  phase0_testing.md  phase1_foundation.md  phase3_components.md  progress.md  tasks.md
docs/implementation/codex-adapter/: CLAUDE.md  features.md  phase2_codex_agent_selection.md  phase3_docker_init_integration.md  tasks.md  user_stories.md
docs/implementation/v1/: phase1_foundation.md  phase2_core.md  phase4_utilities.md  progress.md
docs/implementation/v1/dkmv base [DONE]/: README.md  phase2_core.md  plan_dkmv_v1[DONE].md  progress.md  tasks.md  user_stories.md
docs/implementation/v1/dkmv init/: Agent.md  README.md  features.md  phase1_project_config.md  phase2_init_command.md  phase3_component_registry.md  phase4_container_rename.md  phase5_cli_integration.md  prd_dkmv_init_v1.md  (+3 more)
docs/prds/: prd_multi_agent_adapter.md
docs/relay/: RELAY_IDEATION.md
scripts/: process_logo.py
tests/: conftest.py  factories.py
tests/docker/: test_image.sh
tests/e2e/: test_dev_pipeline.py
tests/integration/: conftest.py  test_run_e2e.py  test_sandbox.py
tests/unit/: test_async_support.py  test_base_component.py  test_builtins.py  test_cli.py  test_cli_agent.py  test_cli_build.py  test_cli_run.py  test_component_multiagent.py  test_component_runner.py  test_config.py  test_context_injection.py  test_dev.py  test_discovery.py  test_dockerfile.py  test_docs.py  test_init.py  test_judge.py  test_manifest.py  test_models.py  test_pause.py  test_project.py  test_prompts.py  test_qa.py  test_registry.py  test_run_commands.py  test_runner.py  test_sandbox.py  test_slug.py  test_start_task.py  test_stream.py  test_system_context.py  test_task_loader.py  test_task_models.py  test_task_runner.py
tests/unit/__snapshots__/: test_prompts.ambr
tests/unit/test_adapters/: test_base.py  test_claude.py  test_codex.py  test_edge_cases.py  test_resolution.py
tests/unit/test_runtime/: test_artifacts.py  test_capability.py  test_facade.py  test_gap_fixes.py  test_handle.py  test_introspection.py  test_observer.py  test_telemetry.py  test_types.py
(+17 files in other folders)
