[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dkmv"
version = "0.1.0"
description = "CLI tool that orchestrates AI agents to implement software features end-to-end"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "swe-rex>=1.4",
    "aiohttp>=3.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
dkmv = "dkmv.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.3",
    "syrupy>=4.0",
    "polyfactory>=2.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
    "commitizen>=4.0",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["e2e: end-to-end tests requiring Docker and API key"]

[tool.coverage.run]
source = ["dkmv"]
branch = true
omit = ["*/tests/*", "dkmv/__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["dkmv"]

[tool.hatch.build.targets.wheel.force-include]
"dkmv/builtins/dev/implement-phase.yaml" = "dkmv/builtins/dev/implement-phase.yaml"
"dkmv/builtins/qa/01-evaluate.yaml" = "dkmv/builtins/qa/01-evaluate.yaml"
"dkmv/builtins/qa/02-fix.yaml" = "dkmv/builtins/qa/02-fix.yaml"
"dkmv/builtins/qa/03-re-evaluate.yaml" = "dkmv/builtins/qa/03-re-evaluate.yaml"
"dkmv/builtins/docs/01-update-docs.yaml" = "dkmv/builtins/docs/01-update-docs.yaml"
"dkmv/builtins/docs/02-verify.yaml" = "dkmv/builtins/docs/02-verify.yaml"
"dkmv/builtins/docs/03-create-pr.yaml" = "dkmv/builtins/docs/03-create-pr.yaml"
"dkmv/builtins/plan/01-analyze.yaml" = "dkmv/builtins/plan/01-analyze.yaml"
"dkmv/builtins/plan/02-features-stories.yaml" = "dkmv/builtins/plan/02-features-stories.yaml"
"dkmv/builtins/plan/03-phases.yaml" = "dkmv/builtins/plan/03-phases.yaml"
"dkmv/builtins/plan/04-assembly.yaml" = "dkmv/builtins/plan/04-assembly.yaml"
"dkmv/builtins/plan/05-evaluate-fix.yaml" = "dkmv/builtins/plan/05-evaluate-fix.yaml"
"dkmv/builtins/dev/component.yaml" = "dkmv/builtins/dev/component.yaml"
"dkmv/builtins/qa/component.yaml" = "dkmv/builtins/qa/component.yaml"
"dkmv/builtins/docs/component.yaml" = "dkmv/builtins/docs/component.yaml"
"dkmv/builtins/plan/component.yaml" = "dkmv/builtins/plan/component.yaml"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
major_version_zero = true
